k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resume
  labels:
    app.kubernetes.io/part-of: arian-svirsky-resume
    environment: production
